flask-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: Devoops-Capstone
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 50%
      maxSurge: 1
  template:
    metadata:
      labels:
        app: flask-backend
    spec:
      containers:
        - name: Devoops-Capstone
          imagePullPolicy: Always
          image: Venuv123/Devoops-Capstone
          resources:
            requests:
              cpu: "50m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "128Mi"
          ports:
            - containerPort: 5000
          readinessProbe:
            httpGet:
              path: /
              port: 5000
            periodSeconds: 10
            timeoutSeconds: 3
            successThreshold: 1
            failureThreshold: 5
