flask-ingress.yaml

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
spec:
  rules:
  - host: Venuv123.Devoops-Capstone
    http:
      paths:
      - path:
        backend:
          serviceName: service-flask-backend
          servicePort: 5000
